# CDC_Projfilter

./: .gitignore  README.md  pyproject.toml
cd_filtering/: bayesian_update.py  cd_proj_conjugate.py  flows.py
examples/: cdf_fhn.py  cdf_vdp.py
exponential_family/: ef.py  n_d_ef.py  n_d_ef_sparse.py  n_d_ef_spg.py
ode_solver/: __init__.py
other_filter/: cd_ekf.py  cd_enkf.py  cd_hgmf.py  cd_pgm.py  cd_pgm_em.py  cd_sp_kf.py  fast_em.py  fast_kmeans.py  particlefilter.py  particlefilter_cont_discrete.py  resampling.py
sigma_points/: gauss_hermite.py  sigma_point_filter_routines.py  sigma_points.py  unscented.py
simulation/: configs.py  dynamical_system.py  post_analysis.py  runs.py  simulation.py
sparse_quadrature/: curtis_clenshaw.py  gauss_hermite.py  gauss_legendre.py  kronrod.py  patterson.py  smolyak.py
symbolic/: n_d.py  sympy_to_jax.py
utils/: density_manipulations.py  dfx_tqdm.py  diffrax.py  fig_pickle.py  hdf_io.py  metrics.py  natural_gradient.py  vectorized.py
