[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "continuous-discrete-conjugate-projection-filter"
version = "0.1.0"
description = "Continuous-discrete projection filter for exponential family using sparse-grid quadratures and information geometry for exponential family with conjugate likelihood"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Muhammad Emzir", email = "puat133@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.2",
    "matplotlib>=3.9.1",
    "scipy>=1.14.1",
    "jaxlib>=0.4.36",
    "jax==0.4.37",
    "sympy>=1.11.1",
    "tqdm>=4.56",
    "numba>=0.60.0",
    "h5py>=3.11.0",
    "tabulate",
    "diffrax>=0.6.1",
    "equinox>=0.11.10",
    "optimistix>=0.0.9",
    "lineax>=0.0.7",
    "ott-jax",
    "jaxtyping",
    "jax_dataclasses>=1.6.3",
    "chex"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.1.1",
    "ruff",
    "uv",
]
notebook = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.3.1",
    "ipykernel",
]
viz = [
    "seaborn>=0.11.1",
]

[tool.setuptools]
packages = {find = {exclude = ["test*", "examples*", "Examples*", "venv*", ".*"]}}
include-package-data = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["*.py"]
pythonpath = ["."]
